# traffic

./: .gitignore  CLAUDE.md  CURRENT_STATE.md  LAPTOP.md  README.md  pyproject.toml
api/: __init__.py  main.py
data/sumo/: central_types.typ.xml
docs/architecture/: decisions.md
docs/calibration/: report.md
docs/development/: Initial_prompt.txt  backlog.md  development-tracker.md
docs/development/phases/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
docs/research/: data-sources.md  engine-selection.md  signal-timing.md  traffic-modeling-primer.md
etl/: __init__.py  __main__.py  calibration.py  census.py  cli.py  config.py  db.py  events.py  network.py  schema.sql  signal_truth.py  signals.py  transit.py  transit_buses.py  transit_schedule.py  util.py  zoning.py
scripts/: phase0_spike.py  screenshot.py  smoke_viewer.py
sim/: __init__.py  __main__.py  calibrate.py  cli.py  demand.py  demand_census.py  demand_metro.py  diagnose.py  equilibrium.py  librun.py  retime.py  run.py  sweep.py  tlscapture.py  trace.py
web/: index.html
web/css/: app.css
web/js/: api.js  atlas.js  basemap.js  buildings.js  config.js  follow.js  hotspots.js  hud.js  layers.js  main.js  playback.js  state.js
