[project]
name = "traffic"
version = "0.1.0"
description = "Greater Vancouver Traffic Simulator — SUMO-driven, browser-rendered."
readme = "README.md"
# Capped at <3.13 pragmatically to guarantee libsumo wheel availability on
# Apple Silicon; widen once newer SUMO wheels are confirmed.
requires-python = ">=3.11,<3.13"
dependencies = [
    "eclipse-sumo>=1.27.0",
    "fastapi>=0.136.3",
    "geopandas>=1.1.3",
    "libsumo>=1.27.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "requests>=2.34.2",
    "rtree>=1.4.1",
    "shapely>=2.1.2",
    "traci>=1.27.0",
    "uvicorn[standard]>=0.48.0",
]

[tool.uv]
# Runtime deps are added via `uv add` (eclipse-sumo, libsumo, traci, ...).

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "ruff>=0.15.15",
]
